--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "CRM API",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsup src",
     "start:dev": "tsx ./src/infa/http/server.ts",
     "start:watch": "tsx watch ./src/infa/http/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint . --ext .ts --fix",
+    "prettier": "prettier --config .prettierrc src/*.ts --write",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
