--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
+    "p-limit": "^6.2.0",
     "pino": "^9.5.0",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.8.0",
