--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@azure/data-tables": "^13.3.0",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
