chore: atualiza env example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,25 @@
+#SERVER
 PORT=9000
 NODE_ENV=develop
+
+#CORS
 ALLOWED_DOMAINS=*
+
+#DATABASE
+CONN_LEADLOVERS_SERVER=
+CONN_PORT=
+CONN_LEADLOVERS_DATABASE=
+CONN_LEADLOVERSZAP_DATABASE=
+CONN_LEADLOVERS_USER=
+CONN_LEADLOVERS_PASS=
+
+#SSO_API
+SSO_API_URL=
+
+#EXTERNAL APIs
+ADD_LEADTRACK_API_URL=
+OUTPUT_WEBHOOK_LEADLOVERS_API_URL=
+
+#AZURE
+LEADLOVERS_TABLE_STORAGE_CONNECTION=""
+LEADLOVERS_LEAD_LOG_TABLE_NAME=""
