--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@azure/data-tables": "^13.3.0",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
