chore: padronização das alterações em criação/edição de CRM

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,12 @@ CONN_LEADLOVERSZAP_DATABASE=
 CONN_LEADLOVERS_USER=
 CONN_LEADLOVERS_PASS=
 
+CONN_QUEUEDB_SERVER=
+CONN_QUEUEDB_PORT=
+CONN_QUEUEDB_DATABASE=
+CONN_QUEUEDB_USER=
+CONN_QUEUEDB_PASS=
+
 #SSO_API
 SSO_API_URL=
 
